# magic-array

./: .gitignore  CMakeLists.txt  README.md  sort_and_reduce_results.txt
include/: compact.cu  magic_array.cuh  peek.cuh  smart_array.cuh  sort_and_filter.cuh
src/: compress.cu  main.cu  sort_and_filter_test.cu  sort_test.cu  test.cu  thrust_sort_and_reduce.cu
